colaboradores-convite-login
Correções para cadastrar convites novos e login apenas que for Administrador ou Gente e Cultura, ao cadastrar mudar para finalizado o convite.
