# api/routes/api.php
@@ -61,9 +61,11 @@ Route::prefix('api')->group(function () {
 
         Route::put('/colaboradores/{id}/perfil', [ColaboradoresController::class, 'updateUserType']);
 
+
         Route::post('/convites', [ConviteController::class, 'enviarConvite']);
 
-
+        Route::get('/convites', [ConviteController::class, 'listarConvites']);
+        Route::get('/status-convites', [ConviteController::class, 'listarStatusConvites']);
     });
 
 
